compete toUri code for launcher
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@395248 13f79535-47bb-0310-9956-ffa450edef68